--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,5 +1,5 @@
 <!-- Header Section -->
-<div class="flex flex-row justify-between items-center pb-6 mb-8 border-b border-gray-700">
+<div class="flex flex-row justify-between items-center pb-6 mb-8 border-b border-gray-700 dark:border-purple-500/80">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary font-inter">
         <i class="pi pi-folder mr-2 lg:mr-5"></i>{{'projects.title' |translate:pageSection}}
     </h2>
