--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto w-full min-h-screen">
+<div class="mx-auto w-full min-h-screen grid grid-rows-[auto,1fr,auto] bg-gray-100 dark:bg-background-dark ">
   <div class="navigation mb-8">
     <div class="max-w-3xl mx-auto p-4">
       <app-header></app-header>
@@ -14,14 +14,14 @@
       <app-projects></app-projects>
     </div>
   </div>
-  <div class="experiences mb-8">
+  <div class="experiences mt-12 mb-12">
     <div class="max-w-3xl mx-auto p-0">
       <app-experience></app-experience>
     </div>
   </div>
-  <div class="contact mb-8">
-    <div class="max-w-3xl mx-auto p-4">
-      <h2>Contact</h2>
+  <div class="contact mt-12 mb-12">
+    <div class="max-w-3xl mx-auto p-0">
+      <app-contact></app-contact>
     </div>
   </div>
 </div>
