--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,22 +5,22 @@
     </div>
   </div>
   <div class="introduction mb-8">
-    <div class="max-w-3xl mx-auto p-0">
+    <div class="max-w-3xl mx-auto p-4 lg:p-0">
       <app-introduction></app-introduction>
     </div>
   </div>
   <div class="projects mb-8">
-    <div class="max-w-3xl mx-auto p-2">
+    <div class="max-w-3xl mx-auto p-4">
       <app-projects></app-projects>
     </div>
   </div>
-  <div class="experiences mt-12 mb-12">
+  <div class="experiences mt-12 mb-12 px-2 lg:px-0">
     <div class="max-w-3xl mx-auto p-0">
       <app-experience></app-experience>
     </div>
   </div>
   <div class="contact mt-12 mb-12">
-    <div class="max-w-3xl mx-auto p-0">
+    <div class="max-w-3xl mx-auto p-4">
       <app-contact></app-contact>
     </div>
   </div>
