--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -89,7 +89,7 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="./images/portfolio.png"
+                <img src="./images/portfolio-image.png"
                     alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
