--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -25,7 +25,7 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="https://images.unsplash.com/photo-1747607176057-175b357ef4ab?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                <img src="images/Api-Ecommerce.png"
                     alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
@@ -57,7 +57,7 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="https://images.unsplash.com/photo-1747607176057-175b357ef4ab?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                <img src='images/devNews.png'
                     alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
@@ -89,7 +89,7 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="./images/portfolio-image.png"
+                <img src="images/Portfolio.png"
                     alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
@@ -121,7 +121,7 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="https://images.unsplash.com/photo-1747607176057-175b357ef4ab?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                <img src="https://nestjs.com/img/nest-og.png"
                     alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
