--- a/src/app/shared/accordion/accordion.component.html
+++ b/src/app/shared/accordion/accordion.component.html
@@ -40,7 +40,7 @@
         <li
           class="flex items-start gap-2 bg-background-dark rounded-md px-4 py-2 text-left text-sm text-white font-inter">
           <i class="pi pi-check-circle text-green-500 mt-1"></i>
-          <span class="break-words text-muted flex-1">{{item | translate: experience}}</span>
+          <span class="break-words  font-mono not-italic font-normal md:text-justify leading-relaxed text-left text-muted flex-1">{{item | translate: experience}}</span>
         </li>
         }
       </ul>
