--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,18 +4,18 @@
     <span class="hidden xs:inline logo-text">MO.Gharib</span>
     <span class="logo-text inline xs:hidden text-black dark:text-primary font-bold">MG</span>
   </div>
-  <input type="checkbox" id="menu-toggle" class="menu-toggle hidden" />
+  <input type="checkbox" id="menu-toggle" class="menu-toggle hidden" #menuToggle />
   <label for="menu-toggle" id="menu-toggle" class="custom-hamburger hidden">
     <span class="bar bg-background-dark! dark:bg-primary!"></span>
     <span class="bar bg-background-dark! dark:bg-primary!"></span>
     <span class="bar bg-background-dark! dark:bg-primary!"></span>
   </label>
   <ul class="menu md:flex flex-col md:flex-row items-center justify-between gap-4 text-foreground">
-    <li><a href="#about" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{ 'navbar.home' | translate }}</a></li>
-    <li><a href="#projects" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.projects' | translate}}</a></li>
-    <li><a href="#experience" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.experiences' | translate}}</a></li>
-    <li><a href="#contact" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.contact' | translate}}</a></li>
-    <li><a href="#resume" class="hover:text-blue-500 hover:font-bold font-inter not:italic">
+    <li><a href="#about" (click)="closeMenu()" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{ 'navbar.home' | translate }}</a></li>
+    <li><a href="#projects" (click)="closeMenu()" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.projects' | translate}}</a></li>
+    <li><a href="#experience" (click)="closeMenu()" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.experiences' | translate}}</a></li>
+    <li><a href="#contact" (click)="closeMenu()" class="hover:text-blue-500 hover:font-bold font-inter not:italic">{{'navbar.contact' | translate}}</a></li>
+    <li><a href="#resume"  class="hover:text-blue-500 hover:font-bold font-inter not:italic">
       <app-languages></app-languages>
     </a></li>
   </ul>
