--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -16,6 +16,7 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-10">
     <!-- Project 1: Spur Fit -->
     <!-- The Card -->
+    @for (project of projectsList ; track project) {
     <div
         class="card relative w-full max-w-sm overflow-hidden rounded-2xl bg-black p-6 shadow-lg backdrop-blur-2xl border border-slate-700">
 
@@ -25,14 +26,13 @@
         <div class="relative z-10">
 
             <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="images/Api-Ecommerce.png"
-                    alt="Screenshot of Snowball project"
+                <img src="{{project.image}}" alt="Screenshot of Snowball project"
                     class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
             </a>
             <!-- Middle Row: Remaining Text -->
             <a href="#" class="group inline-block">
                 <h2 class="text-xl font-semibold text-white dark:text-primary mb-2 flex items-center">
-                    Snowball
+                    {{project.title | translate}} 
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                         stroke="currentColor"
                         class="w-4 h-4 ml-1.5 text-white dark:text-primary transition-all duration-200 ease-in-out group-hover:text-white group-hover:translate-x-0.5">
@@ -42,105 +42,25 @@
                 </h2>
             </a>
             <p class="text-mutated text-sm leading-relaxed">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
+                {{project.description | translate}}
             </p>
+            <!--tags-->
+            @for (tag of project.techStack ; track tag) {
+            <span
+                class="inline-block bg-blue-100 text-blue-800 text-xs font-bold mr-2 px-2.5 py-0.5 rounded dark:bg-purple-500 dark:text-white border dark:font-bold border-blue-800 mt-2 hover:bg:purple-600 transition-colors duration-200">
+                {{tag | translate}}
+            </span>
+            }
+            <!-- View Project Link -->
+            <div class="mt-4 flex flex-row justify-center items-center flex-end">
+  @if (project.githubLink) {
+    <a href="{{project.githubLink}}" target="_blank"
+      class="w-full block text-center  dark:bg-purple-500 bg-blue-100 hover:bg-purple-600 hover:text-white dark:text-white font-semibold text-blue-800 px-4 py-2 rounded-lg shadow transition-all duration-200">
+      <i class="pi pi-external-link mr-2"></i> View Demo
+    </a>
+  }
+</div>
         </div>
     </div>
-    <!-- Project 2: Spur Fit -->
-    <div
-        class="card relative w-full max-w-sm overflow-hidden rounded-2xl bg-black p-6 shadow-lg backdrop-blur-2xl border border-slate-700">
-
-        <!-- The Corner Glow Effect -->
-        <div class="absolute -top-20 -right-20 w-52 h-52 bg-blue-500/20 filter blur-3xl"></div>
-        <!-- Card Content -->
-        <div class="relative z-10">
-
-            <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src='images/devNews.png'
-                    alt="Screenshot of Snowball project"
-                    class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
-            </a>
-            <!-- Middle Row: Remaining Text -->
-            <a href="#" class="group inline-block">
-                <h2 class="text-xl font-semibold text-white dark:text-primary mb-2 flex items-center">
-                    Snowball
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                        stroke="currentColor"
-                        class="w-4 h-4 ml-1.5 text-white dark:text-primary transition-all duration-200 ease-in-out group-hover:text-white group-hover:translate-x-0.5">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
-                    </svg>
-                </h2>
-            </a>
-            <p class="text-mutated text-sm leading-relaxed">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-            </p>
-        </div>
-    </div>
-    <!-- Project 3: Spur Fit -->
-    <div
-        class="card relative w-full max-w-sm overflow-hidden rounded-2xl bg-black p-6 shadow-lg backdrop-blur-2xl border border-slate-700">
-
-        <!-- The Corner Glow Effect -->
-        <div class="absolute -top-20 -right-20 w-52 h-52 bg-blue-500/20 filter blur-3xl"></div>
-        <!-- Card Content -->
-        <div class="relative z-10">
-
-            <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="images/Portfolio.png"
-                    alt="Screenshot of Snowball project"
-                    class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
-            </a>
-            <!-- Middle Row: Remaining Text -->
-            <a href="#" class="group inline-block">
-                <h2 class="text-xl font-semibold text-white dark:text-primary mb-2 flex items-center">
-                    Snowball
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                        stroke="currentColor"
-                        class="w-4 h-4 ml-1.5 text-white dark:text-primary transition-all duration-200 ease-in-out group-hover:text-white group-hover:translate-x-0.5">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
-                    </svg>
-                </h2>
-            </a>
-            <p class="text-mutated text-sm leading-relaxed">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-            </p>
-        </div>
-    </div>
-    <!-- Project 4: Spur Fit -->
-    <div
-        class="card relative w-full max-w-sm overflow-hidden rounded-2xl bg-black p-6 shadow-lg backdrop-blur-2xl border border-slate-700">
-
-        <!-- The Corner Glow Effect -->
-        <div class="absolute -top-20 -right-20 w-52 h-52 bg-blue-500/20 filter blur-3xl"></div>
-        <!-- Card Content -->
-        <div class="relative z-10">
-
-            <a href="#" class="block group mb-6 overflow-hidden rounded-xl">
-                <img src="https://nestjs.com/img/nest-og.png"
-                    alt="Screenshot of Snowball project"
-                    class="w-full h-auto object-cover transition-transform duration-300 ease-in-out group-hover:scale-105" />
-            </a>
-            <!-- Middle Row: Remaining Text -->
-            <a href="#" class="group inline-block">
-                <h2 class="text-xl font-semibold text-white dark:text-primary mb-2 flex items-center">
-                    Snowball
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                        stroke="currentColor"
-                        class="w-4 h-4 ml-1.5 text-white dark:text-primary transition-all duration-200 ease-in-out group-hover:text-white group-hover:translate-x-0.5">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M4.5 19.5l15-15m0 0H8.25m11.25 0v11.25" />
-                    </svg>
-                </h2>
-            </a>
-            <p class="text-mutated text-sm leading-relaxed">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry.
-            </p>
-        </div>
-    </div>
+    }
 </div>
