--- a/src/app/components/introduction/introduction.component.html
+++ b/src/app/components/introduction/introduction.component.html
@@ -1,7 +1,7 @@
 <section id="about" class="max-w-3xl mx-auto p-4">
     <h2 class="text-lg font-bold mb-4 text-black dark:text-primary">
         <i class="pi pi-user mr-2"></i>Mahmoud Gharib</h2>
-    <p class="font-inter not-italic font-normal md:text-justify leading-relaxed text-left">
+    <p class="font-mono not-italic font-normal md:text-justify leading-relaxed text-left">
        {{ 'about.intro' | translate:aboutObj }}
     </p>
   </section>
